2008-03-11  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c :
	  Avoid unecessary error message about missing WCOLL file by
	  only reading that file if no other node selection options
	  have been specified.

2008-01-29  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/mcmcd.c, src/modules/xrcmd.c, src/pdsh/dsh.c, 
	  src/pdsh/mod.c, src/pdsh/opt.c :
	  Fix minor defects as reported by Coverity.

	* src/common/hostlist.h, src/common/hostlist.c :
	  Update to the latest hostlist code from LSD-Tools.

2007-10-24  Mark Grondona <mgrondona@llnl.gov>

	* doc/pdcp.1.in, doc/pdsh.1.in : Update documentation to reflect
	  support for connect timeout for some SSH implementations, and
	  ability to use suffixes on hostlist expressions.

2007-10-23  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Add ncurses-devel to BuildRequires if building with
	  readline support.

	* src/common/pipecmd.h, src/common/pipecmd.c :
	  Added pipecmd_target function to return target hostname from
	  pipecmd object.

	* src/modules/sshcmd.c : Refactor ssh module to use pipecmd.c. 

	* src/modules/sshcmd.c : Add support for connect timeout (-t)
	  to ssh module for openssh using -oConnectTimeout=%d by default.

	* config/ac_ssh.m4 : Add --with-ssh-connect-timeout-option=STRING
	  to ./configure. Allows setting SSH's connect timeout option,
	  "-oConnectTimeout=%d by default", or disabling connect timeout
	  alltogether for SSH with "none".

2007-08-22  Albert Chu <chu11@llnl.gov>

	* src/pdsh/pcp_client.c, src/pdsh/pcp_server.c : Remove
	advertising clause per letter from Berkeley.

2007-06-22  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Redesign of specfile conditionals to allow
	  easier modification of defaults.

	* : tag pdsh-2.14.

2007-06-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Include SLURM headers after all pdsh
	  includes to avoid redefinition of bool type.

	* configure.ac, config/ac_exec.m4, pdsh.spec, 